--- a/Train_chair_style.ipynb
+++ b/Train_chair_style.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOqq9yi+BBuD7aoyjMg2iH4",
+      "authorship_tag": "ABX9TyNmsqmg3ku3waew67ce5WS9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ojbOLWKzqCpl",
-        "outputId": "70961b4a-e7df-4aab-b28e-3670ceae479d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "70961b4a-e7df-4aab-b28e-3670ceae479d"
       },
       "source": [
         "# Load the Drive helper and mount\n",
@@ -43,7 +43,7 @@
         "# This will prompt for authorization.\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,29 +57,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "M4hFh_bjvTad",
-        "outputId": "7d85140f-b1bd-4243-ce50-1390f4e6f31b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "M4hFh_bjvTad"
       },
       "source": [
-        "!pip install split_folders\n",
+        "# Split 70:15:15 into training, validation and test\n",
+        "!pip install -q split_folders\n",
         "import splitfolders"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting split_folders\n",
-            "  Downloading https://files.pythonhosted.org/packages/b8/5f/3c2b2f7ea5e047c8cdc3bb00ae582c5438fcdbbedcc23b3cc1c2c7aae642/split_folders-0.4.3-py3-none-any.whl\n",
-            "Installing collected packages: split-folders\n",
-            "Successfully installed split-folders-0.4.3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -87,7 +73,7 @@
         "id": "5EtIQdSvvTYi"
       },
       "source": [
-        "# Split 70:15:15 into training, validation and test\n",
+        "\n",
         "\n",
         "splitfolders.ratio('/content/drive/My Drive/colabdownloads/chairs/', output=\"/content/drive/My Drive/DS_projects/chair_classifier/\", seed=1337, ratio=(.7, 0.15,0.15))"
       ],
@@ -98,10 +84,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q-htiy5lvTWJ",
-        "outputId": "e74ccd57-006c-46f5-dcd5-830bb28ddf6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e74ccd57-006c-46f5-dcd5-830bb28ddf6f"
       },
       "source": [
         "#Import libraries\n",
@@ -163,7 +149,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,10 +166,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Yo8mlVvuvTUQ",
-        "outputId": "45655c31-a503-4040-abda-1e08e9bed137",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "45655c31-a503-4040-abda-1e08e9bed137"
       },
       "source": [
         "# create class dict: mapping indices to category names\n",
@@ -202,7 +188,7 @@
         "print(labels_train)\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,11 +204,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ej2LH0lvhAzA",
-        "outputId": "afdd7217-ff2a-4744-ac9b-223df0384531",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "outputId": "afdd7217-ff2a-4744-ac9b-223df0384531"
       },
       "source": [
         "\n",
@@ -240,7 +226,7 @@
         "    plt.title(label)\n",
         "  \n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -261,10 +247,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "p318nnY0vTR9",
-        "outputId": "7436b624-9ab4-496b-975e-92d3d5876315",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7436b624-9ab4-496b-975e-92d3d5876315"
       },
       "source": [
         "#base model MobilenetV2\n",
@@ -630,10 +616,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "awRJUcLOwHUh",
-        "outputId": "386e8e46-6b1d-4dbc-b2ef-40088f63de0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "386e8e46-6b1d-4dbc-b2ef-40088f63de0e"
       },
       "source": [
         "#build model\n",
@@ -697,10 +683,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "gq-vuXOavTOF",
-        "outputId": "4a09fbad-195d-466f-a8ce-4db55912487d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4a09fbad-195d-466f-a8ce-4db55912487d"
       },
       "source": [
         "TRAIN_DATASET_SIZE = len(train_generator)\n",
@@ -827,11 +813,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "5_WvnOpdvTMK",
-        "outputId": "b30f0887-d19d-4263-ccca-ef5f768ffc41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
-        }
+        },
+        "outputId": "b30f0887-d19d-4263-ccca-ef5f768ffc41"
       },
       "source": [
         "acc = history.history['accuracy']\n",
@@ -881,10 +867,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "NyJxPOkfvTKG",
-        "outputId": "71510bf8-5ae3-4244-807b-b16d0fe1c181",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "71510bf8-5ae3-4244-807b-b16d0fe1c181"
       },
       "source": [
         "#Confusion Matrix and Classification Report\n",
@@ -973,10 +959,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wIP9x2WTvS_6",
-        "outputId": "88ffe07a-3e4c-4e67-a4c1-bd9968f62cd0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "88ffe07a-3e4c-4e67-a4c1-bd9968f62cd0"
       },
       "source": [
         "print(val_accuracy_array[highest_acc])\n",
@@ -1007,10 +993,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WqYiu6kSvS4U",
-        "outputId": "6f520a05-f3b9-4c4a-d5c4-41c9e1d48da9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6f520a05-f3b9-4c4a-d5c4-41c9e1d48da9"
       },
       "source": [
         "#Set base model to be trained \n",
@@ -1089,10 +1075,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8BTAuUa4vSt2",
-        "outputId": "4fa39b13-d3e3-4ed2-fb32-2e40e85660fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4fa39b13-d3e3-4ed2-fb32-2e40e85660fc"
       },
       "source": [
         "FINE_EPOCHS = 20\n",
@@ -1215,11 +1201,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "qdeluflJpEz0",
-        "outputId": "00ed6bd0-dd8b-4c64-b493-e81af5ca5381",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
-        }
+        },
+        "outputId": "00ed6bd0-dd8b-4c64-b493-e81af5ca5381"
       },
       "source": [
         "# del acc[INITIAL_EPOCH:]\n",
@@ -1276,10 +1262,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "InxL8W_uxBC3",
-        "outputId": "baff6753-73e7-4c7a-c15c-67955e6ad041",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "baff6753-73e7-4c7a-c15c-67955e6ad041"
       },
       "source": [
         "Y_pred = model.predict(test_generator)#, num_of_test_samples // batch_size)\n",
@@ -1349,10 +1335,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "_YLCkiX_NAZG",
-        "outputId": "b9559367-1eb9-4e17-f3a9-5375fb8ee1b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b9559367-1eb9-4e17-f3a9-5375fb8ee1b9"
       },
       "source": [
         "#TEST\n",
@@ -1372,7 +1358,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1387,11 +1373,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "1THfCBFcWRnv",
-        "outputId": "26b7f2dc-6fb9-4f7b-f5f1-f298d94c4f8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 354
-        }
+        },
+        "outputId": "26b7f2dc-6fb9-4f7b-f5f1-f298d94c4f8c"
       },
       "source": [
         "url = input('Enter your URL')\n",
@@ -1416,7 +1402,7 @@
         "\n",
         "classify_image(img)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
